# ldict

./: README-edit.md  README.md  changelog.txt  pyproject.toml  release.sh
.github/workflows/: test.yml
docs/: appearance.html  apply.html  cfg.html  config.html  customjson.html  data.html  exception.html  frozenlazydict.html  functionspace.html  history.html  index.html  lazy.html  lazyval.html  ldict_.html
docs/core/: appearance.html  base.html  index.html  inspection.html  ldict_.html  rshift.html
docs/parameter/: abslet.html  base.html  functionspace.html  index.html  let.html
docs/parameter/base/: absfunctionspace.html  abslet.html  index.html
docs/persistence/: cache.html  cached.html  disk.html  index.html
examples/: apply.py  compositionofsets.py  levelid.py  levellazy.py  merging.py  persistence.py  sampling.py  simple.py
experiments/: serialization.py
src/: data.py  ldict.py
src/cdict/: frozencacheabledict.py
src/dictid/: __init__.py  base62.py  dict.py
src/idict/: __init__.py  appearance.py  compression.py  config.py  data.py  empty.py  frozenidentifieddict.py  ilazyval.py  rshift.py
src/idict/core/: identification.py  idict_.py  rshift.py
src/ldict/: __init__.py  appearance.py  apply.py  cfg.py  compression.py  config.py  core.py  customjson.py  data.py  empty.py  encoding.py  exception.py  frozenlazydict.py  functionspace.py  history.py  lazy.py  lazyval.py  ldict.py  ldict_.py  serialization.py
src/ldict/abs/mixin/: aux.py
src/ldict/core/: appearance.py  base.py  history.py  init.py  inspection.py  ldict_.py  rshift.py
src/ldict/parameter/: __init__.py  abslet.py  base.py  functionspace.py  let.py
src/ldict/parameter/base/: __init__.py  absfunctionspace.py  abslet.py
src/ldict/persistence/: __init__.py  cache.py  cached.py  disk.py  sqla.py
src/ldict_modules/: __init__.py  appearance.py  apply.py  data.py  empty.py  exception.py  history.py  ldict_.py
src/ldict_modules/abs/mixin/: aux.py
src/persistence/: __init__.py  cache.py
tests/: test___init__.py  test___ldict__.py  test_apply.py  test_cache.py  test_dictid.py  test_encoding.py  test_exception.py  test_ldict_.py  test_rshift.py
