[tool.poetry]
name = "ldict"
version = "2.210909.4"
description = "Lazy dict with universally unique identifier for values"
authors = ["davips <dpsabc@gmail.com>"]
license = "GPL"
readme = 'README.md'
packages = [
    { include = "ldict", from = "src" }
]

# For more dependencies and data persistence: poetry install -E full
[tool.poetry.extras]
full = ["sqlalchemy"]

[tool.poetry.dependencies]
python = "^3.8"
orjson = "^3.5.0"
pdoc3 = "^0.10.0"
uncompyle6 = "^3.7.4"
garoupa = "^2.210907.7"
lange = "^0.2101.24"

[tool.poetry.dev-dependencies]
autoreadme = "^0.2102.20"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
black = "^21.7b0"
pypiserver = "^1.4.2"
passlib = "^1.7.4"
pylint = "^2.7.4"
ipython = "^7.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#[[tool.poetry.source]]
#name = "dvpypi"
#url = "http://localhost:8080/simple"
#secondary = true
