[tool.poetry]
name = "ldict"
version = "3.211118.2"
description = "Lazy dict"
authors = ["davips <dpsabc@gmail.com>"]
license = "GPL"
readme = 'README.md'
packages = [
    { include = "ldict", from = "src" }
]

# For more dependencies: poetry install -E full
[tool.poetry.extras]
full = ["pandas"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
garoupa = "^2.211019.3"
lange = "^0.2101.24"
pandas = { version = "^1.3.3", optional = true }
uncompyle6 = "^3.7.4"

[tool.poetry.dev-dependencies]
autoreadme = "^0.2102.20"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
black = "^21.7b0"
pypiserver = "^1.4.2"
passlib = "^1.7.4"
pylint = "^2.7.4"
ipython = "^7.26.0"
pandas = "^1.3.3"
numpy = "^1.21.2"
flake8 = "^4.0.1"
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#[[tool.poetry.source]]
#name = "dvpypi"
#url = "http://localhost:8080/simple"
#secondary = true
