[tool.poetry]
name = "ldict"
version = "3.211129.1"
description = "Lazy dict"
authors = ["davips <dpsabc@gmail.com>"]
license = "GPL"
readme = 'README.md'
packages = [
    { include = "ldict", from = "src" }
]

# For more dependencies: poetry install -E full
[tool.poetry.extras]
full = ["pandas", "numpy", "dill"]

[tool.poetry.dependencies]
python = "^3.8"  #">=3.8,<3.10"  <- numpy restriction
lange = "^0.2101.24"
uncompyle6 = "^3.7.4"
pandas = { version = "^1.3.3", optional = true }
dill = {version = "^0.3.4", optional = true}
#numpy = {version = "^1.21.4", optional = true}
pip = "^21.3.1"

[tool.poetry.dev-dependencies]
autoreadme = "^0.2102.20"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
black = "^21.7b0"
pypiserver = "^1.4.2"
passlib = "^1.7.4"
pylint = "^2.7.4"
ipython = "^7.26.0"
pandas = "^1.3.3"
flake8 = "^4.0.1"
pdoc3 = "^0.10.0"
dill = "^0.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#[[tool.poetry.source]]
#name = "dvpypi"
#url = "http://localhost:8080/simple"
#secondary = true
